--- a/NetCoreLogger/NetCoreLogger.Web/Properties/launchSettings.json
+++ b/NetCoreLogger/NetCoreLogger.Web/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,12 +7,18 @@
       "sslPort": 0
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
+        "LOGFILE_DIAG": "C:\\Logs\\diagfile.txt",
+        "DIAGNOSTICS_ON": "true",
+        "LOGFILE_USAGE": "C:\\Logs\\usagefile.txt",
+        "LOGFILE_ERROR": "C:\\Logs\\errorfile.txt",
+        "LOGFILE_PERF": "C:\\Logs\\perffile.txt",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
@@ -21,10 +26,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
