--- a/NetCoreLogger/NetCoreLogger.Web/NetCoreLogger.Web.csproj
+++ b/NetCoreLogger/NetCoreLogger.Web/NetCoreLogger.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
