--- a/NetCoreLogger/NetCoreLogger.Web/NetCoreLogger.Web.csproj
+++ b/NetCoreLogger/NetCoreLogger.Web/NetCoreLogger.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
